# research-evidence-agent

./: .env.example  .gitignore  NOTICE.md  PROJECT_GUIDE.md  README.md  alembic.ini  compose.yaml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: sse.test.ts  sse.ts
frontend/src/components/: PaperList.tsx  QuestionSelection.tsx  ResearchInput.tsx  RunDetails.tsx  SearchPlanPanel.tsx  UsagePanel.tsx  WorkflowTimeline.tsx
frontend/src/hooks/: useResearchRun.ts
frontend/src/state/: research.test.ts  research.ts
migrations/: env.py
migrations/versions/: 20260715_0001_research_history.py
scripts/: smoke_arxiv.py
src/agentic_search_demo/: __init__.py  api.py  config.py  main.py  models.py  service.py
src/agentic_search_demo/graph/: __init__.py  builder.py  nodes.py  state.py
src/agentic_search_demo/providers/: __init__.py  base.py  demo.py
src/agentic_search_demo/research/: __init__.py  builder.py  nodes.py  planner.py  service.py  state.py
src/research_evidence_agent/: __init__.py  api.py  config.py  main.py  models.py  service.py
src/research_evidence_agent/graph/: __init__.py  builder.py  nodes.py  state.py
src/research_evidence_agent/persistence/: __init__.py  repository.py  tables.py
src/research_evidence_agent/providers/: __init__.py  arxiv.py  base.py  demo.py
tests/: test_academic_planner.py  test_api.py  test_arxiv_provider.py  test_graph.py  test_persistence.py  test_research_planning.py
(+14 files in other folders)
