[project]
name = "research-evidence-agent"
version = "0.1.0"
description = "A LangGraph-powered research evidence agent for AI and computer science questions."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "langgraph>=0.2.76,<1.1",
    "pydantic>=2.10,<3.0",
    "requests>=2.31,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_evidence_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

